fix: improve gap

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,7 @@ span {
 
   .gallerySmall {
     display: grid;
-    gap: 2rem;
+    gap: 4rem;
     grid-auto-rows: 100px;
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
   }
